--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,44 +1,44 @@
 fgc-2017:
-  label: FTC 2017
-  permalink: /ftc-2017
-  description: First Tech Challenge 2017
+  label: FGC 2017
+  permalink: /fgc-2017
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2017
 
 fgc-2018:
-  label: FTC 2018
-  permalink: /ftc-2018
-  description: First Tech Challenge 2018
+  label: FGC 2018
+  permalink: /fgc-2018
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2018
 
 fgc-2019:
-  label: FTC 2019
-  permalink: /ftc-2019
-  description: First Tech Challenge 2019
+  label: FGC 2019
+  permalink: /fgc-2019
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2019
 
 fgc-2020:
-  label: FTC 2020
-  permalink: /ftc-2020
-  description: First Tech Challenge 2020
+  label: FGC 2020
+  permalink: /fgc-2020
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2020
 
 fgc-2021:
-  label: FTC 2021
-  permalink: /ftc-2021
-  description: First Tech Challenge 2021
+  label: FGC 2021
+  permalink: /fgc-2021
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2021
 
 fgc-2022: 
-  label: FTC 2022
-  permalink: /ftc-2022
-  description: First Tech Challenge 2022
+  label: FGC 2022
+  permalink: /fgc-2022
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2022
 
 fgc-2023:
-  label: FTC 2023
-  permalink: /ftc-2023
-  description: First Tech Challenge 2023
+  label: FGC 2023
+  permalink: /fgc-2023
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2023
 
 fgc-2024:
-  label: FTC 2024
-  permalink: /ftc-2024
-  description: First Tech Challenge 2024
+  label: FGC 2024
+  permalink: /fgc-2024
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2024
   
 fgc-2025:
-  label: FTC 2025
-  permalink: /ftc-2025
-  description: First Tech Challenge 2025
+  label: FGC 2025
+  permalink: /fgc-2025
+  description: 𝐹𝐼𝑅𝑆𝑇 Global Challenge 2025
